# Customer-Behaviour-Prediction

./: .test.sh  README.md  devenv.nix  pyproject.toml
.github/workflows/: release.yml  requirement.txt  test.yml
data/: Architecture_Schematic.drawio  Data_Exploration_and_Visualization.ipynb  Transaction_Prediction_Model.ipynb
src/akhil_take_home_assignment/: __init__.py  data_analysis.py  data_preprocessing.py  feature_engineering.py  model_prediction.py  model_training.py  utils.py
tests/: conftest.py  test_data_analysis.py  test_data_preprocessing.py  test_feature_engineering.py  test_functional.py  test_model_prediction.py  test_model_training.py
