
[tool.poetry]
name = "akhil_take_home_assignment"
version = "1.0.0"
description = "Train a Machine Learning model that can predict the total number of transactions for the next three months (February 2019, March 2019, and April 2019) per customer, using data up until January 2019."
authors = ["Akhil Chhibber <akhil.chibber@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "akhil_take_home_assignment", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
hypothesis = "^6.0.0"
structlog = "^23.0.0"
scikit-learn = "^1.2.2"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.0.0"
types-python-dateutil = "^2.8.0"
commitizen = "^3.29.0"
pdbpp = "^0.10.3"
mypy = "^1.11.0"
pytest-coverage = "^0.0"
pytest-dependency = "^0.6.0"
pytest = "^8.3.1"


[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "src/akhil_take_home_assignment/__init__.py"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D"   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "src/akhil_take_home_assignment",
]

[tool.coverage.report]
skip_empty = true
